--- a/lavish.html
+++ b/lavish.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Akachi Ogbonna</title>
+    <title>Akachi Ogbonna - see my work!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
@@ -43,8 +43,9 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
-                        <li class="navbar__list-item"><a href="work">work</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
+                        <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
                     </ul>
@@ -57,7 +58,8 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -66,35 +68,76 @@
             </nav>
         </div>
 
-        <div class="header-container">
-            <div class="home-bg">
+        <div class="project-title-box">
+            <h1 class="project-title">Lavish</h1>
+        </div>
+
+        <div class="work-type-box">
+            <h2 class="work-type">Design challenge, 2019</h2>
+        </div>
+
+        <div class="project-section">
+            <div class="project-desc-box">
+                <p class="project-desc-text">
+                    I find design challenges a bit stressful. They're mostly UI focused and its hard for me 'cos I
+                    think,
+                    'it needs to be solving a problem or something...' <br>
+                    So, I used this site <a href="https://sharpen.design/"
+                        target="_blank">sharpen.design</a>
+                    to find some random challenge and it gave me this "an app for a nightclub"; so I assumed a problem
+                    and designed a solution aroound this. No testing or research because, I was just playing around.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    <strong style="font-family: 'Circular Std'; font-weight: 900; color: #050002;">
+                        The assumed problem:<br>
+                    </strong>
+
+                    Lavish <i style="font-style: italic;">(the nightclub)</i> wants to keep their customers aware of the
+                    events at the club, drinks at the club, club rules make it easier to buy passes to different events
+                    as well as make it easier for the elite members of the club to pay for membership or for anyone who
+                    wants to become an elite member to join.
+                    They also want members to share/tell people about the events they are attending
+
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I wanted it to remain simple so I just asked a few people what they would expect from a nightclub
+                    app and built features around that
+
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I assumed that the Lavish Brand was 'modern & luxurious' and I chose the font, colours and style of
+                    the app to match this theme.
+
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    You can view the figma file
+                    <a href="https://www.figma.com/file/J9hg0XFpCHvCHJMWOG5uZO/a-series-of-madness?node-id=0%3A1"
+                        target="_blank">here</a>
+                </p>
+                <br>
             </div>
 
-            <div class="header">
-                <h1 class="header-title-text">
-                    Hey! I'm 'Kachi.
-                </h1>
-                <p class="header-text ">
-                   I'm a multidisciplinary designer whose focus fields are UI/UX, Illustration, Brand, Graphic and Visual Design
-                </p>
-                <p class="header-text">
-                    Since I started designing, I have helped design and build brands, ads, websites and mobile apps.
-                </p>
-                <p class="header-text">
-                    I love learning new and exciting things and improving my craft but most of all, I'm a person who
-                    likes to have fun. I also enjoy photography and listening to good music.
-                </p>
-
-                <p class="header-text">
-                    I like food, k-drama, the smell of coffee, organised spaces, drawing and books. I also like EXO,
-                    iron man, random conversations, puzzles and generally observing things.
-                </p>
-
-                <div class="header-btn-wrapper">
-                    <button onclick="window.location.href = '/work';" class="header-btn">see my work</button>
-                </div>
+            <div class="logo-process">
+                <h2>Me, thinking</h2>
+                <img src="img/lavish-proc.png">
             </div>
         </div>
+
+        <div class="brand-work-section">
+            <div class="insightful-header">
+                <img src="img/lavish.png" alt="">
+            </div>
+
+            <div class="next-project">
+                <a class="next-project-item" href="/maptrack">previous project</a>
+                <a class="next-project-item" href="/coolkids">next project</a>
+            </div>
+        </div>
+
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
