--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="description" content="Akachi Ogbonna; A UI/UX, Illustration, Brand, Graphic and Visual Designer">
     <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -74,7 +74,7 @@
                     Selected Projects
                 </h1>
                 <p class="header-text">
-                    Some of the things I've worked on.
+                    Some of the things I've done.
                 </p>
 
             </div>
@@ -83,14 +83,14 @@
             <div class="work-item-con">
                 <div class="work-item-wrap">
                     <div class="work-item-frame">
-                        <a href="insightful">
+                        <a href="lavish">
                             <div class="work-item">
-                                <img src="img/insightful-mock.png">
+                                <img src="img/lavish.png">
 
                                 <div class="work-item-overlay">
                                     <div class="work-item--textbox">
-                                        <h2 class="work-item--title">Insightful</h2>
-                                        <p class="work-item--desc">Simple branding</p>
+                                        <h2 class="work-item--title">Lavish</h2>
+                                        <p class="work-item--desc">Design challenge</p>
                                     </div>
                                 </div>
                             </div>
@@ -98,14 +98,14 @@
                     </div>
 
                     <div class="work-item-frame">
-                        <a href="domicilio">
+                        <a href="coolkids">
                             <div class="work-item">
-                                <img src="img/domicillio-mock.png">
+                                <img src="img/coolkids.png">
 
                                 <div class="work-item-overlay">
                                     <div class="work-item--textbox">
-                                        <h2 class="work-item--title">Domicilio</h2>
-                                        <p class="work-item--desc">Simple branding</p>
+                                        <h2 class="work-item--title">CoolKids</h2>
+                                        <p class="work-item--desc">Design challenge</p>
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +114,56 @@
                 </div>
             </div>
             <div class="work-item-con">
-                <div class="work-item-wrap work-item-wrap--lone">
+                <div class="work-item-wrap">
+                    <div class="work-item-frame">
+                        <a href="scydex">
+                            <div class="work-item">
+                                <img src="img/scydex.png">
+
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">Scydex</h2>
+                                        <p class="work-item--desc">HTML/CSS/JS</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="work-item-frame">
+                        <a href="insightful">
+                            <div class="work-item">
+                                <img src="img/insightful-mock.png">
+
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">Insightful</h2>
+                                        <p class="work-item--desc">Branding</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="work-item-con">
+                <div class="work-item-wrap">
+                    <div class="work-item-frame">
+                        <a href="domicilio">
+                            <div class="work-item">
+                                <img src="img/domicillio-mock.png">
+
+                                <div class="work-item-overlay">
+                                    <div class="work-item--textbox">
+                                        <h2 class="work-item--title">Domicilio</h2>
+                                        <p class="work-item--desc">Branding</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                     <div class="work-item-frame">
                         <a href="maptrack">
                             <div class="work-item">
