--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Akachi Ogbonna; A Web, UI/UX and Visual Designer">
+    <meta name="description" content="Akachi Ogbonna; A UI/UX, Illustration, Brand, Graphic and Visual Designer">
     <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
