--- a/coolkids.html
+++ b/coolkids.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Akachi Ogbonna</title>
+    <title>Akachi Ogbonna - see my work!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
@@ -43,8 +43,9 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
-                        <li class="navbar__list-item"><a href="work">work</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
+                        <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
                     </ul>
@@ -57,7 +58,8 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -66,35 +68,53 @@
             </nav>
         </div>
 
-        <div class="header-container">
-            <div class="home-bg">
+        <div class="project-title-box">
+            <h1 class="project-title">CoolKids</h1>
+        </div>
+
+        <div class="work-type-box">
+            <h2 class="work-type">Design Challenge, 2019</h2>
+        </div>
+
+        <div class="project-section">
+            <div class="project-desc-box">
+                <p class="project-desc-text">
+                    This one was inspired by the <a href="https://www.dailyui.co/" target="_blank">Daily UI</a>
+                    Challenge; Day one prompt, "Sign up page"
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I tried to do daily UI one time but I was too busy with work to complete anything, but I got so
+                    excited thinking I got an invite to dribbble. So, I went back to redo one of the Daily UI designs I
+                    did one time.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I felt like a cool kid. hehe.
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    Made in InvisionStudio.
+                </p>
+                <br>
             </div>
 
-            <div class="header">
-                <h1 class="header-title-text">
-                    Hey! I'm 'Kachi.
-                </h1>
-                <p class="header-text ">
-                   I'm a multidisciplinary designer whose focus fields are UI/UX, Illustration, Brand, Graphic and Visual Design
-                </p>
-                <p class="header-text">
-                    Since I started designing, I have helped design and build brands, ads, websites and mobile apps.
-                </p>
-                <p class="header-text">
-                    I love learning new and exciting things and improving my craft but most of all, I'm a person who
-                    likes to have fun. I also enjoy photography and listening to good music.
-                </p>
-
-                <p class="header-text">
-                    I like food, k-drama, the smell of coffee, organised spaces, drawing and books. I also like EXO,
-                    iron man, random conversations, puzzles and generally observing things.
-                </p>
-
-                <div class="header-btn-wrapper">
-                    <button onclick="window.location.href = '/work';" class="header-btn">see my work</button>
-                </div>
+            <div class="logo-process">
+                <!-- <h2>In motion</h2> -->
+                <img src="img/coolkids2.gif">
             </div>
         </div>
+
+        <div class="brand-work-section">
+            <div class="insightful-header">
+                <img src="img/coolkids.png" alt="">
+            </div>
+            <div class="next-project">
+                <a class="next-project-item" href="/lavish">previous project</a>
+                <a class="next-project-item" href="/scydex">next project</a>
+            </div>
+        </div>
+
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
