--- a/maptrack.html
+++ b/maptrack.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="work-type-box">
-            <h2 class="work-type">Re-Branding, 2018</h2>
+            <h2 class="work-type">Re-branding & re-design, 2018</h2>
         </div>
 
         <div class="project-section">
@@ -131,7 +131,7 @@
             </div>
             <div class="next-project">
                 <a class="next-project-item" href="/domicilio">previous project</a>
-                <a class="next-project-item" href="/insightful">next project</a>
+                <a class="next-project-item" href="/lavish">next project</a>
             </div>
         </div>
 
