--- a/scydex.html
+++ b/scydex.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Design, Designer, UI/UX, Visual, Graphic design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Akachi Ogbonna</title>
+    <title>Akachi Ogbonna - see my work!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
@@ -43,8 +43,9 @@
 
                 <div class="main-navbar">
                     <ul class="navbar__menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
-                        <li class="navbar__list-item"><a href="work">work</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
+                        <li class="navbar__list-item menu-active"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
                     </ul>
@@ -57,7 +58,8 @@
                         <span></span>
                     </div>
                     <ul class="mobile-navbar-menu" id="mobile-nav-menu">
-                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank">resume</a></li>
+                        <li class="navbar__list-item"><a href="https://bit.ly/2Tbxcbp" target="_blank"
+                                href="">resume</a></li>
                         <li class="navbar__list-item"><a href="work">work</a></li>
                         <li class="navbar__list-item"><a href="process">design process</a></li>
                         <li class="navbar__list-item"><a href="contact">contact</a></li>
@@ -66,35 +68,57 @@
             </nav>
         </div>
 
-        <div class="header-container">
-            <div class="home-bg">
+        <div class="project-title-box">
+            <h1 class="project-title">Scydex</h1>
+        </div>
+
+        <div class="work-type-box">
+            <h2 class="work-type">HTML/CSS/JS, 2019</h2>
+        </div>
+
+        <div class="project-section">
+            <div class="project-desc-box">
+                <p class="project-desc-text">
+                    For Scydex, I was asked to just build the site as a template and I was given samples + ideas of what
+                    the product owner wanted the site to look like and as always, I delivered
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I learnt a lot from this project. I wrote some of the best code I've ever had to write
+                    and it also inspired me to write about <a target="_blank"
+                        href="https://medium.com/@akachinonyerem_/optimising-your-design-to-code-flow-77c670ce2495?source=---------2------------------">optimizing
+                        code to design flow</a>
+                </p>
+                <br>
+                <p class="project-desc-text">
+                    I first had to design a mini design system in figma based on the specification given to me 
+                    Then I wrote the HTML and CSS using SASS which helped me to write modular and scalable code. 
+                    You can view the project <a href="https://scydex.netlify.com/" target="_blank">here</a>.  
+                </p>
+                <br>
             </div>
 
-            <div class="header">
-                <h1 class="header-title-text">
-                    Hey! I'm 'Kachi.
-                </h1>
-                <p class="header-text ">
-                   I'm a multidisciplinary designer whose focus fields are UI/UX, Illustration, Brand, Graphic and Visual Design
-                </p>
-                <p class="header-text">
-                    Since I started designing, I have helped design and build brands, ads, websites and mobile apps.
-                </p>
-                <p class="header-text">
-                    I love learning new and exciting things and improving my craft but most of all, I'm a person who
-                    likes to have fun. I also enjoy photography and listening to good music.
-                </p>
-
-                <p class="header-text">
-                    I like food, k-drama, the smell of coffee, organised spaces, drawing and books. I also like EXO,
-                    iron man, random conversations, puzzles and generally observing things.
-                </p>
-
-                <div class="header-btn-wrapper">
-                    <button onclick="window.location.href = '/work';" class="header-btn">see my work</button>
-                </div>
+            <div class="logo-process">
+                <img src="img/scydex.png">
             </div>
         </div>
+
+        <div class="brand-work-section">
+            <div class="redesigned-ui" style="background-color: #141414;">
+                <img src="img/scydex1.png" alt="">
+            </div>
+            <div class="redesigned-ui" style="background-color: #ffffff;">
+                <img src="img/scydex2.png" alt="">
+            </div>
+            <div class="redesigned-ui" style="background-color: #1c39bb;">
+                <img src="img/scydex3.png" alt="">
+            </div>
+            <div class="next-project">
+                <a class="next-project-item" href="/coolkids">previous project</a>
+                <a class="next-project-item" href="/insightful">next project</a>
+            </div>
+        </div>
+
     </div>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
