tiny updates to lavish

--- a/lavish.html
+++ b/lavish.html
@@ -82,10 +82,9 @@
                     I find design challenges a bit stressful. They're mostly UI focused and its hard for me 'cos I
                     think,
                     'it needs to be solving a problem or something...' <br>
-                    So, I used this site <a href="https://sharpen.design/"
-                        target="_blank">sharpen.design</a>
+                    So, I used this site <a href="https://sharpen.design/" target="_blank">sharpen.design</a>
                     to find some random challenge and it gave me this "an app for a nightclub"; so I assumed a problem
-                    and designed a solution aroound this. No testing or research because, I was just playing around.
+                    and designed a solution around this. No testing or research because, I was just playing around.
                 </p>
                 <br>
                 <p class="project-desc-text">
@@ -94,8 +93,8 @@
                     </strong>
 
                     Lavish <i style="font-style: italic;">(the nightclub)</i> wants to keep their customers aware of the
-                    events at the club, drinks at the club, club rules make it easier to buy passes to different events
-                    as well as make it easier for the elite members of the club to pay for membership or for anyone who
+                    events at the club, drinks at the club, club rules, buy passes to different events and make it
+                    easy for the elite members of the club to pay for membership or for anyone who
                     wants to become an elite member to join.
                     They also want members to share/tell people about the events they are attending
 
