tiny updates the site

--- a/contact.html
+++ b/contact.html
@@ -71,16 +71,17 @@
                     Say Hello!
                 </h1>
                 <p class="header-text">
-                    Experience the joy that working with Kachi brings :D
+                    Experience the joy that working with Kachi brings :D<br>
+                    <i style="font-style: italic;">Take risk, try me and succeed!</i>
                 </p>
                 <!-- <p class="header-text">
-                   <em>(currently available for only interesting side projects)</em> 
+                    <i style="font-style: italic;">Take risk, try me and succeed!</i>
                 </p> -->
                 <p class="header-text">
                 </p>
             </div>
         </div>
-        <div class="work-contact-main-con">
+        <div class="work-contact-main-con" style="margin-top:4rem;">
             <div class="contact-item-con">
                 <div class="contact-item-wrap">
                     <div class="contact-item">
@@ -104,14 +105,13 @@
                         <p class="contact-item--text">
                             Send me a <a class="contact-item--text-link"
                                 href="mailto:akachinonyerem.o@gmail.com">mail</a>
-                            or <a class="contact-item--text-link" href="https://twitter.com/akachinonyerem_">tweet</a>
-                            at
-                            me. You can also see what i’ve been up
+                            or <a class="contact-item--text-link" href="https://twitter.com/akachinonyerem_" target="_blank">a tweet or DM</a>
+                            me. You can also see what I’ve been up
                             to
                             on <a class="contact-item--text-link"
-                                href="https://www.instagram.com/akachinonyerem_/">instagram</a>, check out my <a
+                                href="https://www.instagram.com/akachinonyerem_/" target="_blank">instagram</a>, check out my <a
                                 class="contact-item--text-link"
-                                href="https://www.behance.net/akachinonyerem_">behance</a>
+                                href="https://www.behance.net/akachinonyerem_" target="_blank">behance</a>
                             profile and stuff I’ve written
                             on
                             <a class="contact-item--text-link" href="https://medium.com/@akachinonyerem_">medium</a>.
